objects/nitro__Nitro_Custom_Trigger__c.object
<CustomObject>
    <fields>
        <fullName>nitro__Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>nitro__Label__c</fullName>
        <label>Label</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>nitro__Trigger_Name__c</fullName>
        <label>Trigger Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Nitro Custom Trigger</label>
    <nameField>
        <label>Nitro Custom Trigger Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Nitro Custom Triggers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>